k3s_cluster/base/private/monitor/dozzle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-monitor-dozzle
spec:
  type: ClusterIP
  selector:
    app: private-monitor-dozzle
  ports:
    - name: web
      protocol: TCP
      port: 4415
      targetPort: 8080
