k3s_cluster/base/private/monitor/dozzle/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-monitor-dozzle
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`dozzle.monitor.private.home`)
      # middlewares:
      #   - name: private-middleware-auth-authentik
      services:
        - name: private-monitor-dozzle-service
          port: 4415
  #tls: {}
